Modified 'screen' class to stop overflow

--- a/index.css
+++ b/index.css
@@ -22,6 +22,7 @@ body {
   gap: 15px;
   display: flex;
   flex-direction: column;
+  max-width: 340px;
 }
 
 .remove {
@@ -41,6 +42,12 @@ body {
   padding: 0 1.56em;
   box-sizing: border-box;
   min-height: 4.63em;
+  overflow: auto;
+}
+
+.screen::-webkit-scrollbar {
+  display: none;
+  width: 0;
 }
 
 .proccess {
